`WARNING: CPU: 8 PID: 2188 at kernel/workqueue.c:1784 __queue_work.part.0+0x2fd/0x3a0`
On a Dell XPS 15 7590 with Debian sid/unstable with Debian’s Linux 6.7.7 and manually loading the module nouveau
, resuming from ACPI S3, the warning below is shown:
[ 176.949558] OOM killer enabled.
[ 176.949560] Restarting tasks ... done.
[ 176.951424] random: crng reseeded on system resumption
[ 177.015895] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.016166] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.016429] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.016691] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.016953] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.017219] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.017490] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.017765] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.122710] PM: suspend exit
[ 177.149557] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.149831] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.150100] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.150362] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.150625] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.150888] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.151170] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.151437] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.151699] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.151963] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.152224] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.152486] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.152747] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.153009] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.153272] ACPI Warning: Time parameter 250 us > 100 us violating ACPI spec, please fix the firmware. (20230628/exsystem-141)
[ 177.354612] mei_hdcp 0000:00:16.0-b638ab7e-94e2-4ea2-a552-d1c54b627f04: bound 0000:00:02.0 (ops i915_hdcp_ops [i915])
[ 178.386820] ------------[ cut here ]------------
[ 178.386823] WARNING: CPU: 8 PID: 2188 at kernel/workqueue.c:1784 __queue_work.part.0+0x2fd/0x3a0
[ 178.386829] Modules linked in: nouveau drm_gpuvm drm_exec gpu_sched drm_ttm_helper sg st sd_mod sr_mod cdrom nvram rfcomm snd_seq_dummy snd_hrtimer snd_seq snd_seq_device xfrm_interface xfrm6_tunnel tunnel6 l2tp_ppp tunnel4 l2tp_netlink xfrm_user l2tp_core xfrm_algo ip6_udp_tunnel udp_tunnel pppox ppp_generic slhc cmac algif_hash algif_skcipher af_alg qrtr snd_hda_codec_hdmi snd_sof_pci_intel_cnl snd_sof_intel_hda_common snd_ctl_led snd_hda_codec_realtek soundwire_intel bnep soundwire_generic_allocation snd_sof_intel_hda_mlink snd_hda_codec_generic soundwire_cadence snd_sof_intel_hda snd_sof_pci snd_sof_xtensa_dsp snd_sof snd_sof_utils soundwire_bus snd_soc_skl snd_soc_hdac_hda snd_hda_ext_core snd_soc_sst_ipc snd_soc_sst_dsp snd_soc_acpi_intel_match snd_soc_acpi iwlmvm snd_soc_core joydev x86_pkg_temp_thermal intel_powerclamp snd_compress coretemp mac80211 binfmt_misc kvm_intel snd_pcm_dmaengine i915 libarc4 kvm uvcvideo snd_hda_intel wacom r8153_ecm cdc_ether btusb usbnet snd_intel_dspcfg hid_multitouch irqbypass
[ 178.386890] ee1004 snd_intel_sdw_acpi nls_ascii iwlwifi snd_hda_codec drm_buddy videobuf2_vmalloc nls_cp437 iTCO_wdt btrtl rapl drm_display_helper intel_pmc_bxt uvc btintel vfat mei_wdt iTCO_vendor_support snd_hda_core videobuf2_memops fat dell_laptop watchdog videobuf2_v4l2 btbcm mei_hdcp ledtrig_audio btmtk intel_cstate snd_hwdep dell_wmi mei_pxp cfg80211 bluetooth videodev intel_uncore intel_rapl_msr snd_pcm psmouse cec r8152 dell_smbios dell_wmi_sysman dell_smm_hwmon processor_thermal_device_pci_legacy videobuf2_common dcdbas rc_core processor_thermal_device snd_timer pcspkr dell_wmi_descriptor processor_thermal_wt_hint ecdh_generic firmware_attributes_class thunderbolt mii wmi_bmof intel_wmi_thunderbolt snd mxm_wmi processor_thermal_rfim ttm mc cdc_acm processor_thermal_rapl i2c_i801 ecc mei_me soundcore rfkill intel_rapl_common i2c_smbus intel_lpss_pci drm_kms_helper processor_thermal_wt_req mei intel_lpss processor_thermal_power_floor idma64 processor_thermal_mbox i2c_algo_bit intel_soc_dts_iosf
[ 178.386963] intel_pch_thermal button int3403_thermal int340x_thermal_zone dell_smo8800 intel_hid int3400_thermal intel_pmc_core acpi_pad acpi_thermal_rel sparse_keymap ac evdev parport_pc ppdev lp parport configfs loop efi_pstore nfnetlink ip_tables x_tables ext4 crc16 mbcache jbd2 crc32c_generic dm_crypt typec_displayport hid_generic usbhid ahci i2c_hid_acpi i2c_hid libahci nvme hid libata nvme_core xhci_pci rtsx_pci_sdmmc drm xhci_hcd scsi_mod t10_pi crc32_pclmul mmc_core crc32c_intel crc64_rocksoft_generic ghash_clmulni_intel sha512_ssse3 crc64_rocksoft ucsi_acpi crc_t10dif typec_ucsi sha512_generic crct10dif_generic crct10dif_pclmul sha256_ssse3 crc64 roles usbcore sha1_ssse3 rtsx_pci typec video crct10dif_common scsi_common battery usb_common wmi serio_raw dm_mirror dm_region_hash dm_log dm_mod msr efivarfs autofs4 aesni_intel crypto_simd cryptd
[ 178.387035] CPU: 8 PID: 2188 Comm: gnome-shell Not tainted 6.7.7-amd64 #1 Debian 6.7.7-1
[ 178.387038] Hardware name: Dell Inc. XPS 15 7590/0VYV0G, BIOS 1.27.0 02/01/2024
[ 178.387040] RIP: 0010:__queue_work.part.0+0x2fd/0x3a0
[ 178.387044] Code: 91 13 54 4d 83 c1 01 48 63 c9 e8 3e 1c 54 00 8b 15 08 3a d6 01 89 c1 41 89 c6 39 d0 73 48 65 89 0d 70 13 54 4d e9 2f fd ff ff <0f> 0b e9 99 fe ff ff 83 c9 02 49 8d 57 68 48 89 de 4c 89 ff e8 3a
[ 178.387046] RSP: 0018:ffffa5dec2fc7c98 EFLAGS: 00010007
[ 178.387048] RAX: ffff9aa3bc7f7a10 RBX: ffff9aa3bc7f7a08 RCX: 0000000000000000
[ 178.387050] RDX: 0000000000000000 RSI: ffff9aa380400920 RDI: ffff9aaadc632e80
[ 178.387051] RBP: ffff9aaadc632e80 R08: ffff9aa380400948 R09: ffffffffb4658de0
[ 178.387052] R10: 0000000000000000 R11: 0000000000000000 R12: 0000000000002000
[ 178.387053] R13: ffff9aa380050e00 R14: 0000000000000008 R15: ffff9aa380139c00
[ 178.387055] FS: 00007ffba43cce00(0000) GS:ffff9aaadc600000(0000) knlGS:0000000000000000
[ 178.387056] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 178.387058] CR2: 00005631cc51bc08 CR3: 000000013cd82005 CR4: 00000000003706f0
[ 178.387059] Call Trace:
[ 178.387061] <TASK>
[ 178.387062] ? __queue_work.part.0+0x2fd/0x3a0
[ 178.387065] ? __warn+0x81/0x130
[ 178.387070] ? __queue_work.part.0+0x2fd/0x3a0
[ 178.387072] ? report_bug+0x171/0x1a0
[ 178.387076] ? handle_bug+0x3c/0x80
[ 178.387079] ? exc_invalid_op+0x17/0x70
[ 178.387081] ? asm_exc_invalid_op+0x1a/0x20
[ 178.387085] ? __queue_work.part.0+0x2fd/0x3a0
[ 178.387088] ? __queue_work.part.0+0xe6/0x3a0
[ 178.387091] queue_work_on+0x3b/0x50
[ 178.387095] nouveau_pmops_runtime_resume+0xe6/0x190 [nouveau]
[ 178.387235] ? __pfx_pci_pm_runtime_resume+0x10/0x10
[ 178.387239] __rpm_callback+0x41/0x170
[ 178.387242] ? __pfx_pci_pm_runtime_resume+0x10/0x10
[ 178.387245] rpm_callback+0x5d/0x70
[ 178.387247] ? __pfx_pci_pm_runtime_resume+0x10/0x10
[ 178.387249] rpm_resume+0x56e/0x7b0
[ 178.387252] __pm_runtime_resume+0x4b/0x80
[ 178.387254] nouveau_drm_ioctl+0x39/0xb0 [nouveau]
[ 178.387408] __x64_sys_ioctl+0x94/0xd0
[ 178.387414] do_syscall_64+0x61/0x120
[ 178.387418] ? exit_to_user_mode_prepare+0x40/0x1e0
[ 178.387422] ? syscall_exit_to_user_mode+0x2b/0x40
[ 178.387426] ? do_syscall_64+0x70/0x120
[ 178.387429] ? syscall_exit_to_user_mode+0x2b/0x40
[ 178.387431] ? do_syscall_64+0x70/0x120
[ 178.387435] ? syscall_exit_to_user_mode+0x2b/0x40
[ 178.387437] ? do_syscall_64+0x70/0x120
[ 178.387441] ? syscall_exit_to_user_mode+0x2b/0x40
[ 178.387443] ? do_syscall_64+0x70/0x120
[ 178.387447] entry_SYSCALL_64_after_hwframe+0x6e/0x76
[ 178.387451] RIP: 0033:0x7ffba8b1b5cb
[ 178.387454] Code: 00 48 89 44 24 18 31 c0 48 8d 44 24 60 c7 04 24 10 00 00 00 48 89 44 24 08 48 8d 44 24 20 48 89 44 24 10 b8 10 00 00 00 0f 05 <89> c2 3d 00 f0 ff ff 77 1c 48 8b 44 24 18 64 48 2b 04 25 28 00 00
[ 178.387457] RSP: 002b:00007fff0c4d4600 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
[ 178.387461] RAX: ffffffffffffffda RBX: 000055d19f6d6820 RCX: 00007ffba8b1b5cb
[ 178.387463] RDX: 00007fff0c4d46a0 RSI: 00000000c0306480 RDI: 0000000000000048
[ 178.387465] RBP: 00007fff0c4d46a0 R08: 0000000000000004 R09: 000000055d19f6d6
[ 178.387467] R10: 0000000000000004 R11: 0000000000000246 R12: 00000000c0306480
[ 178.387469] R13: 0000000000000048 R14: 000055d19fbdbff0 R15: 000055d1a20c77a8
[ 178.387474] </TASK>
[ 178.387475] ---[ end trace 0000000000000000 ]---